<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/chat_dark"
        android:padding="10dp"
        android:contentDescription= "@string/logo" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/logo"
        android:height="50dp"
        android:hint="@string/hintName"
        android:background="@drawable/background_login"
        android:paddingStart="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPersonName"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/etName"
        android:height="50dp"
        android:layout_marginTop="10dp"
        android:hint="@string/hintEmail"
        android:background="@drawable/background_login"
        android:paddingStart="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPersonName"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/etEmail"
        android:hint="@string/hintPassword"
        android:background="@drawable/background_login"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPersonName"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_marginTop="20dp"
        android:height="50dp"
        android:background="@drawable/btn_background"
        android:layout_marginEnd="80dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:text="@string/signup" />

</RelativeLayout>